--- a/themes/xmin/static/css/style.css
+++ b/themes/xmin/static/css/style.css
@@ -10,7 +10,10 @@ body {
   padding: 0; 
   list-style: none;
 }
-.menu li { display: inline-block; }
+.menu li { 
+  display: inline-block; 
+  list-style: none; 
+}
 .menu li::marker{
   display: none;
 }
