--- a/themes/xmin/static/css/style.css
+++ b/themes/xmin/static/css/style.css
@@ -8,14 +8,8 @@ body {
 /* header and footer areas */
 .menu { 
   padding: 0; 
-  list-style: none;
-}
-.menu li { 
-  display: inline-block; 
-  list-style: none; 
-}
-.menu li::marker{
-  display: none;
+  display: flex;
+  gap: 10px;
 }
 .article-meta, .menu a {
   text-decoration: none;
