--- a/themes/xmin/layouts/partials/header.html
+++ b/themes/xmin/layouts/partials/header.html
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    {{/*  <nav class="menu">
+    <nav class="menu">
     {{ range .Site.Menus.main }}
     <div class="menu-item">
       <a href="{{ .URL | relURL }}">{{ .Name }}</a>
     </div>
     {{ end }}
     <hr/>
-    </nav>  */}}
+    </nav>
